test: keep Security Center RED within source-inspection policy